	  Patch from Terry Burton.
	* Added RCNTEC dictionary. Closes #3168.
	* Added Pica8 dictionary. Closes #3179.
	* Add TLS-Client-Cert-Valid-Since attribute holding notBefore date.
	  Patch from Boris Lytochkin.  Fixes #3157.
	* Generate attributes containing unknown OIDs.
	  See raddb/sites-available/tls.  Patch from Boris Lytochkin.
	* Update the WiMAX dictionary.

	Bug fixes
	* Set permissions of certificates in bootstrap shell script.
	  Fixes #3132.
	* Increase the 'nasportid' SQL field for 'varchar(32)'. #3141
	* Skip processing proxy reply if there are no home servers
	  available.
	* Update SQLite IPPool queries.  Fixes #3177
	  Patch from Terry Burton.
	* rlm_sql_unixodbc fixes. Patches from Terry Burton. Fixes #2822
	* Fixes when building with LibreSSL. Patch from Nathan Owens.
	* Fix the rlm_python3 build. Note that this module is experimental. #3183
	* The rlm_python should append the 'python_path' paths in 'sys.path',
	  It fixes the expected behavior to use the existing Python modules.
	  Fixes #3180
	* Fix rlm_python to print the script errors properly.

FreeRADIUS 3.0.20 Thu 14 Nov 2019 12:00:00 EDT urgency=medium
	Feature improvements
	* Add Jenkins continuous integration.  Fixes #2620.
	  Used to build http://packages.networkradius.com/
	* Added Force10 dictionary.
	* Update dictionary.hp with new attributes.  #2690
	* Update dictionary.aruba with new attributes.  #2696
	* Update logrotate settings to rotate as non-root user. #2666
	* Fix side-channel leak in EAP-PWD.  Patch from Mathy Vanhoef.
	* Relax OpenSSL version checks, now that their API is both
	  public, and stable.
	* Note that tls_min_version/tls_max_version also support "1.3"
	  Since there is no standard yet for EAP with TLS 1.3, it
	  will not work.
	* Added tripplite dictionary from #2760.
	* Switch to the async interface for rlm_sql_postgresql so that
	  we can enforce query_timeout.
	* Added new LDAP option 'allow_dangling_group_ref'.